# historic

./: Cargo.toml  README.md  justfile
src/: cmd.rs  db.rs  error.rs  lib.rs  main.rs  terminal.rs  tracing.rs  utils.rs
src/tui/: event.rs  input.rs  mod.rs  ui.rs
